added summery comments in swagger api
